--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-dropdown-select-list": "^2.0.5",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-image-crop-picker": "^0.40.3",
+    "react-native-image-picker": "^7.1.2",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
