--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@react-native-async-storage/async-storage": "^1.23.1",
-    "@react-native-community/datetimepicker": "^7.6.2",
+    "@react-native-community/datetimepicker": "^7.6.4",
     "@react-navigation/native": "^6.0.2",
+    "@react-navigation/stack": "^6.3.29",
+    "@types/react-navigation": "^3.4.0",
+    "axios": "^1.6.8",
     "expo": "~49.0.10",
     "expo-crypto": "~12.4.1",
     "expo-font": "~11.4.0",
