--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-image-crop-picker": "^0.40.3",
     "react-native-image-picker": "^7.1.2",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
+    "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
