--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll"
   },
@@ -13,6 +13,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@dietime/react-native-date-picker": "^1.2.1",
     "@expo/vector-icons": "^13.0.0",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
@@ -21,11 +22,13 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@react-native-async-storage/async-storage": "^1.23.1",
-    "@react-native-community/datetimepicker": "^7.6.4",
+    "@react-native-camera-roll/camera-roll": "^7.5.2",
+    "@react-native-community/datetimepicker": "^7.7.0",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.3.29",
     "@types/react-navigation": "^3.4.0",
     "axios": "^1.6.8",
+    "dayjs": "^1.11.10",
     "expo": "~49.0.10",
     "expo-crypto": "~12.4.1",
     "expo-font": "~11.4.0",
@@ -39,16 +42,24 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-awesome-loading": "^1.0.15",
     "react-native-collapsible": "^1.6.1",
+    "react-native-customized-image-picker": "^1.3.4",
+    "react-native-date-picker": "^5.0.2",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-elements": "^3.4.3",
+    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-image-crop-picker": "^0.40.3",
     "react-native-image-picker": "^7.1.2",
+    "react-native-loader-kit": "^2.0.8",
+    "react-native-loading-dots": "^1.3.4",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
+    "react-native-photo-upload": "^1.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "^15.1.0",
+    "react-native-ui-datepicker": "^2.0.2",
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6",
     "react-router-dom": "^6.22.3"
