--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
+    "@ptomasroos/react-native-multi-slider": "^2.2.2",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-camera-roll/camera-roll": "^7.5.2",
     "@react-native-community/datetimepicker": "^7.7.0",
+    "@react-native-picker/picker": "^2.7.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.3.29",
     "@types/react-navigation": "^3.4.0",
