--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo-google-fonts/roboto": "^0.2.3",
     "@expo/vector-icons": "^13.0.0",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
@@ -20,8 +21,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
-    "@react-native-async-storage/async-storage": "^1.23.1",
-    "@react-native-community/datetimepicker": "^7.6.4",
+    "@react-native-async-storage/async-storage": "^1.18.2",
+    "@react-native-community/datetimepicker": "^7.2.0",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.3.29",
     "@types/react-navigation": "^3.4.0",
@@ -36,9 +37,10 @@
     "expo-status-bar": "~1.6.0",
     "expo-system-ui": "~2.4.0",
     "expo-web-browser": "~12.3.2",
+    "link": "^2.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.4",
+    "react-native": "^0.72.13",
     "react-native-collapsible": "^1.6.1",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-elements": "^3.4.3",
@@ -46,9 +48,11 @@
     "react-native-image-crop-picker": "^0.40.3",
     "react-native-image-picker": "^7.1.2",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
+    "react-native-paper": "^5.12.3",
+    "react-native-reanimated": "^3.8.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-svg": "^15.1.0",
+    "react-native-svg": "^13.9.0",
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6",
     "react-router-dom": "^6.22.3"
