--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
-    "@react-native-async-storage/async-storage": "^1.23.1",
-    "@react-native-community/datetimepicker": "^7.6.4",
+    "@react-native-async-storage/async-storage": "^1.18.2",
+    "@react-native-community/datetimepicker": "^7.2.0",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.3.29",
     "@types/react-navigation": "^3.4.0",
@@ -38,7 +38,7 @@
     "expo-web-browser": "~12.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.4",
+    "react-native": "^0.72.13",
     "react-native-collapsible": "^1.6.1",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-elements": "^3.4.3",
@@ -48,7 +48,7 @@
     "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-svg": "^15.1.0",
+    "react-native-svg": "^13.9.0",
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6",
     "react-router-dom": "^6.22.3"
