--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@baronha/react-native-multiple-image-picker": "^1.1.6",
     "@dietime/react-native-date-picker": "^1.2.1",
     "@expo/vector-icons": "^13.0.0",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
@@ -30,6 +31,7 @@
     "@react-navigation/stack": "^6.3.29",
     "@types/react-navigation": "^3.4.0",
     "axios": "^1.6.8",
+    "base-64": "^1.0.0",
     "dayjs": "^1.11.10",
     "expo": "~49.0.10",
     "expo-crypto": "~12.4.1",
@@ -41,6 +43,7 @@
     "expo-status-bar": "~1.6.0",
     "expo-system-ui": "~2.4.0",
     "expo-web-browser": "~12.3.2",
+    "firebase": "^10.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.4",
@@ -61,7 +64,7 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "^15.1.0",
-    "react-native-ui-datepicker": "^2.0.2",
+    "react-native-ui-datepicker": "^2.0.3",
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6",
     "react-router-dom": "^6.22.3"
