--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -174,6 +174,8 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+    
+    compile "com.android.support:appcompat-v7:25.0.1"
 }
 
 apply from: new File(["node", "--print", "require.resolve('@react-native-community/cli-platform-android/package.json')"].execute(null, rootDir).text.trim(), "../native_modules.gradle");
