--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -35,7 +35,10 @@
         <category android:name="android.intent.category.BROWSABLE"/>
         <data android:scheme="myapp"/>
         <data android:scheme="com.example.myapp"/>
-      </intent-filter>
+        <data android:scheme="yourapp" android:host="open" />
+        <data android:scheme="http" android:host="facebook.com" />
+        <data android:scheme="https" android:host="facebook.com" />
+      </intent-filter> 
     </activity>
     <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" android:exported="false"/>
   </application>
