--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-native": "0.72.4",
     "react-native-awesome-loading": "^1.0.15",
     "react-native-collapsible": "^1.6.1",
+    "react-native-custom-tabs": "^0.1.7",
     "react-native-customized-image-picker": "^1.3.4",
     "react-native-date-picker": "^5.0.2",
     "react-native-dropdown-select-list": "^2.0.5",
@@ -59,23 +60,28 @@
     "react-native-gesture-handler": "~2.12.0",
     "react-native-image-crop-picker": "^0.40.3",
     "react-native-image-picker": "^7.1.2",
+    "react-native-inappbrowser-reborn": "^3.7.0",
     "react-native-loader-kit": "^2.0.8",
     "react-native-loading-dots": "^1.3.4",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
-    "react-native-photo-upload": "^1.3.0",
     "react-native-paper": "^5.12.3",
+    "react-native-photo-upload": "^1.3.0",
     "react-native-reanimated": "^3.8.1",
+    "react-native-safari-view": "^2.1.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "^15.1.0",
     "react-native-ui-datepicker": "^2.0.3",
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6",
+    "react-native-webview": "^13.10.3",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
+    "@types/react-native-custom-tabs": "^0.1.5",
+    "@types/react-native-safari-view": "^2.0.9",
     "jest": "^29.2.1",
     "jest-expo": "~49.0.0",
     "react-test-renderer": "18.2.0",
