--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "react-native": "^0.72.13",
     "react-native-collapsible": "^1.6.1",
     "react-native-dropdown-select-list": "^2.0.5",
+    "react-native-element-dropdown": "^2.12.1",
     "react-native-elements": "^3.4.3",
+    "react-native-feather": "^1.1.2",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-image-crop-picker": "^0.40.3",
     "react-native-image-picker": "^7.1.2",
