--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -175,8 +175,14 @@ dependencies {
         implementation jscFlavor
     }
     
-    compile "com.android.support:appcompat-v7:25.0.1"
+    implementation 'com.android.support:appcompat-v7:25.0.1'
+
+    implementation platform('com.google.firebase:firebase-bom:26.4.0')
+    implementation ('com.google.firebase:firebase-messaging')
+
 }
 
 apply from: new File(["node", "--print", "require.resolve('@react-native-community/cli-platform-android/package.json')"].execute(null, rootDir).text.trim(), "../native_modules.gradle");
 applyNativeModulesAppBuildGradle(project)
+apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.android.application' 
