--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "@ptomasroos/react-native-multi-slider": "^2.2.2",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-camera-roll/camera-roll": "^7.5.2",
+    "@react-native-clipboard/clipboard": "^1.14.1",
     "@react-native-community/datetimepicker": "^7.7.0",
+    "@react-native-firebase/app": "^20.1.0",
+    "@react-native-firebase/messaging": "^20.1.0",
     "@react-native-picker/picker": "^2.7.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.3.29",
@@ -51,7 +54,6 @@
     "react-native": "0.72.4",
     "react-native-awesome-loading": "^1.0.15",
     "react-native-collapsible": "^1.6.1",
-    "react-native-custom-tabs": "^0.1.7",
     "react-native-customized-image-picker": "^1.3.4",
     "react-native-date-picker": "^5.0.2",
     "react-native-dropdown-select-list": "^2.0.5",
@@ -65,6 +67,7 @@
     "react-native-loading-dots": "^1.3.4",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-paper": "^5.12.3",
+    "react-native-phone-call": "^1.2.0",
     "react-native-photo-upload": "^1.3.0",
     "react-native-reanimated": "^3.8.1",
     "react-native-safari-view": "^2.1.0",
@@ -75,7 +78,8 @@
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6",
     "react-native-webview": "^13.10.3",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "expo-clipboard": "~4.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
