--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-camera-roll/camera-roll": "^7.5.2",
     "@react-native-community/datetimepicker": "^7.7.0",
+    "@react-native-firebase/messaging": "^20.1.0",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.3.29",
     "@types/react-navigation": "^3.4.0",
