--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "base-64": "^1.0.0",
     "dayjs": "^1.11.10",
     "expo": "~49.0.10",
+    "expo-clipboard": "~4.3.1",
     "expo-crypto": "~12.4.1",
     "expo-font": "~11.4.0",
     "expo-image-picker": "~14.3.2",
@@ -57,6 +58,7 @@
     "react-native-customized-image-picker": "^1.3.4",
     "react-native-date-picker": "^5.0.2",
     "react-native-dropdown-select-list": "^2.0.5",
+    "react-native-element-dropdown": "^2.12.1",
     "react-native-elements": "^3.4.3",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.12.0",
@@ -78,8 +80,7 @@
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6",
     "react-native-webview": "^13.10.3",
-    "react-router-dom": "^6.22.3",
-    "expo-clipboard": "~4.3.1"
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
