--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "expo-web-browser": "~12.3.2",
     "firebase": "^10.11.1",
     "link": "^2.1.0",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.4",
@@ -61,6 +62,7 @@
     "react-native-element-dropdown": "^2.12.1",
     "react-native-elements": "^3.4.3",
     "react-native-fast-image": "^8.6.3",
+    "react-native-feather": "^1.1.2",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-image-crop-picker": "^0.40.3",
     "react-native-image-picker": "^7.1.2",
@@ -80,13 +82,15 @@
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6",
     "react-native-webview": "^13.10.3",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "tailwindcss": "^3.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
     "@types/react-native-custom-tabs": "^0.1.5",
     "@types/react-native-safari-view": "^2.0.9",
+    "@types/tailwindcss": "^3.1.0",
     "jest": "^29.2.1",
     "jest-expo": "~49.0.0",
     "react-test-renderer": "18.2.0",
